--- a/server/package.json
+++ b/server/package.json
@@ -21,18 +21,22 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/cli": "^8.0.0",
     "@nestjs/apollo": "^10.0.19",
+    "@nestjs/cli": "^8.0.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.21",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "apollo-server-express": "^3.10.1",
     "graphql": "^16.6.0",
+    "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "run-script-webpack-plugin": "^0.1.1",
     "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9",
     "webpack": "^5.74.0",
     "webpack-node-externals": "^3.0.0"
   },
@@ -50,7 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.0.3",
-    "prettier": "^2.3.2",
+    "prettier": "^2.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.1",
