--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:pm2": "pm2 start dist/main.js -i max. -i max -f",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -28,9 +29,12 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.21",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/graphql-upload": "^8.0.11",
     "apollo-server-express": "^3.10.1",
     "graphql": "^16.6.0",
+    "graphql-upload": "13",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
