--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,12 @@
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/graphql-upload": "^8.0.11",
+    "@types/multer": "^1.4.7",
     "apollo-server-express": "^3.10.1",
+    "buffer-to-stream": "^1.0.0",
+    "class-validator": "^0.13.2",
+    "cloudinary": "^1.31.0",
+    "crypto": "^1.0.1",
     "graphql": "^16.6.0",
     "graphql-upload": "13",
     "pg": "^8.8.0",
