--- a/server/package.json
+++ b/server/package.json
@@ -28,11 +28,14 @@
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.21",
+    "@nestjs/jwt": "^9.0.0",
+    "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
     "@types/graphql-upload": "^8.0.11",
     "@types/multer": "^1.4.7",
+    "@types/passport-jwt": "^3.0.6",
     "apollo-server-express": "^3.10.1",
     "buffer-to-stream": "^1.0.0",
     "class-validator": "^0.13.2",
@@ -40,6 +43,7 @@
     "crypto": "^1.0.1",
     "graphql": "^16.6.0",
     "graphql-upload": "13",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
