--- a/server/package.json
+++ b/server/package.json
@@ -37,12 +37,14 @@
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.6",
     "apollo-server-express": "^3.10.1",
+    "argon2": "^0.29.1",
     "buffer-to-stream": "^1.0.0",
     "class-validator": "^0.13.2",
     "cloudinary": "^1.31.0",
     "crypto": "^1.0.1",
     "graphql": "^16.6.0",
     "graphql-upload": "13",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
